fix: cart background is not growing on mobile home page

--- a/src/app/components/shop/components/home-page/home-page.component.scss
+++ b/src/app/components/shop/components/home-page/home-page.component.scss
@@ -1,31 +1,20 @@
 @import "variables";
 
-:host {
-  height: 100%;
-}
-
 .home-page {
-  position: absolute;
-  z-index: 0;
-
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-around;
-  align-items: center;
-  height: calc(100% - #{$features-toolbar-height});
-  min-height: 450px;
+	display: block;
+  min-height: 460px;
 
   text-shadow: 1px 1px 1px black;
 
   &__background-container {
     position: absolute;
-    z-index: 0;
-
+		top: 0;
     width: 100%;
-    height: 100%;
+  	height: 100%;
   }
 
   &__background-image {
+		display: block;
     width: 100%;
     height: 100%;
 
@@ -48,7 +37,7 @@
 		background-color: transparentize($color: black, $amount: 0.4);
 
     &_title {
-      width: 100%;
+      margin: 0 auto;
       max-width: 500px;
 			padding: 6px;
 
@@ -98,14 +87,22 @@
 			}
 		}
 	}
-    
 }
 
-@media screen and (max-width: map-get($breakpoints, tablet)) {
-  .home-page {
+@media screen and (min-width: map-get($breakpoints, tablet)) {
+	.home-page {
+		position: absolute;
+		display: flex;
+		justify-content: space-around;
+		align-items: center;
+		flex-flow: column nowrap;
+		height: calc(100% - #{$features-toolbar-height});
+	}
+}
 
-		height: unset;
-    min-height: calc(100% - #{$features-toolbar-height});
+@media screen and (max-width: map-get($breakpoints, tablet) - 1px) {
+  .home-page {
+	
     &__cards {
       flex-flow: column nowrap;
       justify-content: space-evenly;
@@ -140,13 +137,17 @@
 			&_title {
 				border: 2px solid transparentize($color: white, $amount: 0.2);
 			}
+
+			&:last-child {
+				margin-bottom: 70px;
+			}
 		}
 
     &__background-image {
       display: none;
 
       &_mobile {
-        display: inline-block;
+        display: block;
       }
     }
   }
@@ -155,8 +156,8 @@
 @media screen and (max-width: map-get($breakpoints, mobile) - 1px) {
   .home-page {
     &__card {
-      margin-top: 20px;
-      margin-bottom: 20px;
+      margin-top: 25px;
+      margin-bottom: 25px;
       width: 90%;
       padding-top: 12px;
 
