--- a/src/app/components/shop/shop.component.scss
+++ b/src/app/components/shop/shop.component.scss
@@ -90,6 +90,7 @@
 
   &__content {
     position: relative;
+		z-index: 0;
 
     flex-grow: 1;
     width: 100%;
@@ -186,7 +187,11 @@
 
       &_cart {
         margin-left: 15px;
-      }
+			}
+			
+			&_scroll-top {
+				bottom: 4px;
+			}
     }
 
     &__features-toolbar {
@@ -211,7 +216,7 @@
     }
 
     &_scroll-top {
-      right: 4px;
+			right: 4px;
     }
   }
 }
